# PeerSend

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
easytier-core/: Cargo.toml
frontend/cli/: Cargo.toml
frontend/cli/src/: daemon.rs  main.rs
frontend/cli/src/arch/: mod.rs  windows.rs
frontend/cli/src/service/: mod.rs
frontend/gui/: Cargo.toml  tauri.conf.json
frontend/gui/icons/: iconset.json
frontend/gui/src-tauri/: tauri.conf.json
frontend/gui/src-tauri/src/: main.rs
frontend/gui/ui/: index.html  package-lock.json  package.json  vite.config.js
frontend/gui/ui/src/: App.vue
frontend/gui/ui/src/api/: easytier.js  localsend.js
frontend/gui/ui/src/components/: DeviceCard.vue  DeviceList.vue  FileSelector.vue  NetworkPanel.vue  NodeList.vue  PinDialog.vue  ProgressBar.vue  ReceiveDialog.vue  SendDialog.vue
frontend/gui/ui/src/stores/: deviceStore.js  networkStore.js  transferStore.js  uiStore.js
frontend/gui/ui/src/utils/: constants.js  format.js
frontend/gui/ui/src/views/: ConfigView.vue  MainView.vue
protocol/: Cargo.toml
protocol/src/: lib.rs
protocol/src/crypto/: mod.rs
protocol/src/discovery/: mod.rs
protocol/src/dto/: mod.rs
protocol/src/server/: mod.rs
protocol/src/session/: mod.rs
