[workspace]
members = [
    "easytier-core",
    "easytier-rpc-build",
    "protocol",
    "frontend/cli",
    "frontend/gui",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.89"

[workspace.dependencies]
# Common dependencies
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"
bytes = "1.5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
