[package]
name = "peersend-gui"
description = "PeerSend GUI"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
path = "src-tauri/src/main.rs"
name = "peersend-gui"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
